Coverity analysis defect 148125: Data race condition

XMLWordPrintableJSON

    • Storage Engines, Storage Engines - Server Integration
    • Fully Compatible
    • ALL
    • StressiSESI - 2025-09-16
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /data/mci/261f65657bd114359a8e3a064d6e450e/bazel_cache/54c751a1c930d7b7fb2afe7fb4a68167/execroot/_main/src/mongo/db/storage/devnull/ephemeral_catalog_record_store.cpp:557: MISSING_LOCK 148125 Accessing "this->_data->dataSize" without holding lock "mongo::EphemeralForTestRecordStore::Data.recordsMutex". Elsewhere, "mongo::EphemeralForTestRecordStore::Data.dataSize" is written to with "Data.recordsMutex" held 9 out of 10 times.

            Assignee:
            Gregory Wlodarek
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: