SERVER-109733 Use mutex in EphemeralForTestRecordStore::storageSize() (#40967)

GitOrigin-RevId: 23ad9463e43afc3e5196525c2e7e3d62f7cb25a6